# demerge

./: .buildinfo  .gitignore  .gitmodules  CITATION.cff  Doxyfile  LICENSE  README.md  calc_resonance_params.py  cleanup.sh  dfits2dems.py  dfits_dict.yaml  dmerge.py  dmerge.sh  dmerge_deprecated.py  dummy_dfits.py  genindex.html  index.html  make_divided_data.py  make_reduced_fits.py  mergeWrapper.py  merge_function.py  merge_to_dems.py  merge_to_dfits.py  mergetofits.py  objects.inv  plot.py  py-modindex.html  pyproject.toml  run.sh  search.html  searchindex.js  test_dfits2dems.py  test_dmerge.py  test_merge_to_dems.py
.devcontainer/: devcontainer.json
.doctrees/: environment.pickle  index.doctree
.doctrees/_apidoc/: demerge.data.doctree  demerge.doctree  demerge.merge.doctree  demerge.merge.utils.doctree  demerge.reduce.doctree
.github/workflows/: pypi.yaml  tests.yaml
_apidoc/: demerge.data.html  demerge.html  demerge.merge.html  demerge.merge.utils.html  demerge.reduce.html
_modules/: demerge.html  index.html
_modules/demerge/: data.html  merge.html  reduce.html
_modules/demerge/merge/: utils.html
_sources/_apidoc/: demerge.data.rst.txt  demerge.merge.rst.txt  demerge.merge.utils.rst.txt  demerge.reduce.rst.txt  demerge.rst.txt
data/: make_d2_data.sh  memo
data/D2_supplements/: 0803102015_comp.txt  pwv_20160706_0000.log.xz  tsky_20160706_0000.log.xz  xytrace.txt
data/D2_supplements/cabin_201711/: cabin_20171101_0000.log.xz  cabin_20171102_0000.log.xz  cabin_20171103_0000.log.xz  cabin_20171104_0000.log.xz  cabin_20171105_0000.log.xz  cabin_20171106_0000.log.xz  cabin_20171107_0000.log.xz  cabin_20171108_0000.log.xz  cabin_20171109_0000.log.xz  cabin_20171109_0257.log.xz  cabin_20171110_0000.log.xz  cabin_20171110_1321.log.xz  cabin_20171111_0000.log.xz  cabin_20171112_0000.log.xz  cabin_20171113_0000.log.xz  cabin_20171114_0000.log.xz  cabin_20171114_1531.log.xz  cabin_20171115_0000.log.xz  cabin_20171116_0000.log.xz  cabin_20171116_0716.log.xz  cabin_20171117_0000.log.xz  cabin_20171117_0242.log.xz  cabin_20171118_0000.log.xz  cabin_20171119_0000.log.xz  cabin_20171120_0000.log.xz  cabin_20171121_0000.log.xz  cabin_20171121_2249.log.xz  cabin_20171122_0000.log.xz  cabin_20171123_0000.log.xz  cabin_20171124_0000.log.xz  cabin_20171125_0000.log.xz
demerge/: __init__.py  calc_resonance_params.py  cli.py  demerge.py  make_divided_data.py  make_reduced_fits.py  merge_function.py  merge_to_dems.py  plot.py  run.sh
demerge/analysis/: __init__.py
demerge/data/: __init__.py  missing.ant  missing.cabin  missing.misti  missing.skychop  missing.wea
demerge/merge/: __init__.py  utils.py
demerge/reduce/: __init__.py
dmerge/: __init__.py  calc_resonance_params.py  dmerge.py  make_divided_data.py  make_reduced_fits.py  merge_function.py  merge_to_dems.py  plot.py
docs/: build  conf.py  index.md
html/: ._index.html  annotated.html  calc__resonance__params_8py.html  calc__resonance__params_8py_source.html  classdeshima_1_1_kid_fit_result-members.html  classdeshima_1_1_kid_fit_result.html  classdeshima_1_1_m_k_i_d_data_exception-members.html  classdeshima_1_1_m_k_i_d_data_exception.html  classdmerge_1_1_fixed_data-members.html  classdmerge_1_1_fixed_data.html  classdmerge_1_1_fixed_fit_data-members.html  classdmerge_1_1_fixed_fit_data.html  classdmerge_1_1_sweep_data-members.html  classdmerge_1_1_sweep_data.html  classdmerge_1_1_t_o_ds-members.html  classdmerge_1_1_t_o_ds.html  classes.html  classmerge__function_1_1_cabin_temp_d_b-members.html  classmerge__function_1_1_cabin_temp_d_b.html  classmerge__to__dfits_1_1_merge_to_dfits-members.html  classmerge__to__dfits_1_1_merge_to_dfits.html  classtest__dmerge_1_1_dmerge_test_drive-members.html  classtest__dmerge_1_1_dmerge_test_drive.html  deshima_8py.html  deshima_8py_source.html  dmerge_8py.html  dmerge_8py_source.html  dmerge__deprecated_8py.html  dmerge__deprecated_8py_source.html  files.html  functions.html  functions_func.html  functions_prop.html  functions_vars.html  hierarchy.html  index.html  make__divided__data_8py.html  make__divided__data_8py_source.html  make__reduced__fits_8py.html  make__reduced__fits_8py_source.html  (+29 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  (+43 more)
test/: make_testdata.py  mktd.sh  tdmaker.py  test_dfits2dems.py  test_merge_to_dems.py
tests/: mktd.sh  tdmaker.py  test_merge_function.py  test_merge_to_dems.py
(+103 files in other folders)
