[tool.poetry]
name = "demerge"
version = "2024.7.0"
description = "DESHIMA merge code for observed datasets"
authors = [
    "Tatsuya Takekoshi <tatsuya.takekoshi@gmail.com>",
    "Daisuke Naito <naito@naitosystems.com>",
    "Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>",
]
keywords = [
    "astronomy",
    "radio-astronomy",
    "submillimeter",
    "spectroscopy",
    "deshima",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/deshima-dev/demerge/"
documentation = "https://deshima-dev.github.io/demerge/"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
astropy = ">=5.2, <7.0"
dems = "^2024.7.2"
fire = "^0.5"
h5py = ">=3.7, <3.11"
lmfit = "^1.2"
matplotlib = "^3.7"
numpy =	"^1.23"
pandas = ">=1.5, <3.0"
pandas-stubs = ">=1.5, <3.0"
scikit-learn = "^1.2"
scipy = "^1.10"
sympy = "^1.10"
zarr = "^2.14"

[tool.poetry.group.dev.dependencies]
black = "^24.4"
deshima-rawdata = "^2024.4"
ipython = "^8.18"
myst-parser = "^3.0"
pydata-sphinx-theme = "^0.15"
pyright = "^1.1"
pytest = "^8.2"
sphinx = "^7.3"

[tool.poetry.scripts]
demerge = "demerge:cli"
merge = "demerge.merge:cli"
reduce = "demerge.reduce:cli"

[tool.black]
exclude = "demerge/reduce/utils"

[tool.pyright]
exclude = ["demerge/reduce/utils"]
typeCheckingMode = "basic"
reportAttributeAccessIssue = "warning"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
