[project]
name = "demerge"
version = "2025.6.1"
description = "DESHIMA merge code for observed datasets"
readme = "README.md"
keywords = [
    "astronomy",
    "data-format",
    "deshima",
    "measurement-set",
    "spectroscopy",
    "submillimeter",
]
requires-python = ">=3.9,<3.13"
dependencies = [
    "astropy>=6,<8",
    "dems>=2025.6,<2026.0",
    "fire>=0.5,<1.0",
    "h5py>=3,<4",
    "lmfit>=1,<2",
    "matplotlib>=3,<4",
    "metpy>=1,<2",
    "numpy>=1.23,<3.0",
    "pandas>=2,<3",
    "pandas-stubs>=2,<3",
    "scikit-learn>=1,<2",
    "scipy>=1,<2",
    "sympy>=1,<2",
    "zarr>=2,<3",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[[project.authors]]
name = "Akio Taniguchi"
email = "taniguchi.akio@gmail.com"

[[project.authors]]
name = "Tatsuya Takekoshi"
email = "tatsuya.takekoshi@gmail.com"

[[project.authors]]
name = "Daisuke Naito"
email = "naito@naitosystems.com"

[project.license]
file = "LICENSE"

[project.scripts]
demerge = "demerge:demerge_cli"
merge = "demerge.merge:merge_cli"
reduce = "demerge.reduce:reduce_cli"

[project.urls]
homepage = "https://deshima-dev.github.io/demerge"
repository = "https://github.com/deshima-dev/demerge"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25,<26",
    "deshima-rawdata>=2024.4,<2025.0",
    "ipython>=8,<10",
    "myst-parser>=3,<5",
    "pydata-sphinx-theme>=0.15,<1.0",
    "pyright>=1,<2",
    "pytest>=8,<9",
    "sphinx>=7,<9",
]

[tool.black]
exclude = "demerge/reduce/utils"

[tool.pyright]
exclude = ["demerge/reduce/utils"]
typeCheckingMode = "basic"
reportAttributeAccessIssue = "warning"
